manifests-failed/kubedb-enterprise-v0.11.2.tgz-manifest.yaml
---
# Source: kubedb-enterprise/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubedb-enterprise
  namespace: kubedb-enterprise-v0.11.2.tgz
  labels:
    helm.sh/chart: kubedb-enterprise-v0.11.2
    app.kubernetes.io/name: kubedb-enterprise
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.11.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: operator
    port: 443
    targetPort: operator
  selector:
    app.kubernetes.io/name: kubedb-enterprise
    app.kubernetes.io/instance: my-release
---
# Source: kubedb-enterprise/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubedb-enterprise
  namespace: kubedb-enterprise-v0.11.2.tgz
  labels:
    helm.sh/chart: kubedb-enterprise-v0.11.2
    app.kubernetes.io/name: kubedb-enterprise
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.11.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubedb-enterprise
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubedb-enterprise
        app.kubernetes.io/instance: my-release
      annotations:
        checksum/apiregistration.yaml: c2d6cfa178d81558e6f59daf9229d343e432adea7f581635f78cf56ed2fb37ad
    spec:
      
      serviceAccountName: my-release-kubedb-enterprise
      containers:
      - name: operator
        securityContext:
          {}
        image: kubedb/kubedb-enterprise:v0.11.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-mutating-webhook=true
        - --enable-validating-webhook=true
        - --bypass-validating-webhook-xray=false
        - --use-kubeapiserver-fqdn-for-aks=true
        ports:
        - name: operator
          containerPort: 8443
        volumeMounts:
        - mountPath: /tmp
          name: tmpdir
        - mountPath: /var/serving-cert
          name: serving-cert
        resources:
          {}
      volumes:
      - name: tmpdir
        emptyDir: {}
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: my-release-kubedb-enterprise-apiserver-cert
      securityContext:
        {}
      nodeSelector:
        beta.kubernetes.io/os: linux
---
# Source: kubedb-enterprise/templates/license.yaml
# if license file is provided, then create a secret for license
---
# Source: kubedb-enterprise/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.ops.kubedb.com
  labels:
    helm.sh/chart: kubedb-enterprise-v0.11.2
    app.kubernetes.io/name: kubedb-enterprise
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.11.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: mysqlopsrequest.mutators.ops.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.ops.kubedb.com/v1alpha1/mysqlopsrequests
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - apiGroups: ["ops.kubedb.com"]
    apiVersions: ["*"]
    resources: ["mysqlopsrequests"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Fail
  sideEffects: None
---
# Source: kubedb-enterprise/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.ops.kubedb.com
  labels:
    helm.sh/chart: kubedb-enterprise-v0.11.2
    app.kubernetes.io/name: kubedb-enterprise
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v0.11.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: mysqlopsrequest.validators.ops.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.ops.kubedb.com/v1alpha1/mysqlopsrequests
    caBundle: bm90LWNhLWNlcnQ=
  rules:
    - apiGroups: ["ops.kubedb.com"]
      apiVersions: ["*"]
      resources: ["mysqlopsrequests"]
      operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Fail
  sideEffects: None
- name: mongodbopsrequest.validators.ops.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.ops.kubedb.com/v1alpha1/mongodbopsrequests
    caBundle: bm90LWNhLWNlcnQ=
  rules:
    - apiGroups: ["ops.kubedb.com"]
      apiVersions: ["*"]
      resources: ["mongodbopsrequests"]
      operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Fail
  sideEffects: None
- name: elasticsearchopsrequest.validators.ops.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.ops.kubedb.com/v1alpha1/elasticsearchopsrequests
    caBundle: bm90LWNhLWNlcnQ=
  rules:
    - apiGroups: ["ops.kubedb.com"]
      apiVersions: ["*"]
      resources: ["elasticsearchopsrequests"]
      operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Fail
  sideEffects: None
- name: redisopsrequest.validators.ops.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/validators.ops.kubedb.com/v1alpha1/redisopsrequests
    caBundle: bm90LWNhLWNlcnQ=
  rules:
    - apiGroups: ["ops.kubedb.com"]
      apiVersions: ["*"]
      resources: ["redisopsrequests"]
      operations: ["CREATE", "UPDATE", "DELETE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Fail
  sideEffects: None
